--- a/index.html
+++ b/index.html
@@ -118,35 +118,45 @@
       x = w.innerWidth || e.clientWidth || g.clientWidth,
       y = w.innerHeight|| e.clientHeight|| g.clientHeight;
 
-  // Compute the distinct nodes from the links.
-  links.forEach(function(link) {
-    link.Source -= 1;
-    link.Target -= 1;
-  });
-
+  // Filter invalid nodes
   nodes = nodes.filter(function(n) { return n.Id != "" });
 
+  // Filter nodes based on dontshow paramter
   var dontshow = getParameterByName("dontshow");
-  if (getParameterByName("dontshow")) {
+  if (dontshow) {
     nodes = nodes.filter(function(n) { return n.Type != dontshow });
-    links = links.filter(function(l) { return nodes[l.Source] && nodes[l.Target] });
+  }
+
+  function findNodeById(id) {
+    var r = null;
+    nodes.forEach(function(node) {
+      if (node.Id == id) {
+        r = node;
+      }
+    });
+    return r;
   }
 
   links.forEach(function(link) {
-    link.source = nodes[link.Source];
-    link.target = nodes[link.Target];
-    link.weight = link.Weight;
-    if (nodes[link.Target].degree) {
-      nodes[link.Target].degree += 1;
-    } else {
-      nodes[link.Target].degree = 1;
-    }
-    if (nodes[link.Source].degree) {
-      nodes[link.Source].degree += 1;
-    } else {
-      nodes[link.Source].degree = 1;
+    link.source = findNodeById(link.Source);
+    link.target = findNodeById(link.Target);
+    if (link.source && link.target) {
+      link.weight = link.Weight;
+      if (link.target.degree != undefined) {
+        link.target.degree += 1;
+      } else {
+        link.target.degree = 1;
+      }
+      if (link.source.degree != undefined) {
+        link.source.degree += 1;
+      } else {
+        link.source.degree = 1;
+      }
     }
   });
+
+  // Filter out nodes with invalid connections
+  links = links.filter(function(l) { return l.source && l.target; })
 
   var width = x,
       height = y;
