--- a/index.html
+++ b/index.html
@@ -1,5 +1,8 @@
 <!DOCTYPE html>
-<meta charset="utf-8">
+<html>
+<head>
+  <title>FinTech Ecosystem</title>
+  <meta charset="utf-8">
   <style>
 
   html, body {
@@ -82,6 +85,7 @@
   }
 
   </style>
+</head>
 <body>
   <script src="d3.v3.min.js"></script>
   <script src="d3-zoom.v1.min.js"></script>
