Fixed legend error

--- a/index.html
+++ b/index.html
@@ -372,7 +372,7 @@
       </tr>
       <tr>
         <td><svg style="width:20px;height:20px;"><circle class="node disabled" r="8" style="transform:translate(10px,10px)"></circle></svg></td>
-        <td>did not exist then (in time series mode)</td>
+        <td>had no partnerships then (in time series mode)</td>
       </tr>
       <tr>
         <td></td>
